# airmosaic-ai-web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_ZH.md  app.js  index.html  pyproject.toml  styles.css
catalog/datasets/: admin_boundary.yaml  gdp.yaml  health_burden.yaml  meic_emission.yaml  population.yaml  tap_pm25.yaml
catalog/schemas/: dataset.schema.json  variable.schema.json
docs/: design-system-proposal.md  publish-website.md
docs/research/: research_airmosaic_ai_methods_20260702.md
docs/specs/: 2026-07-02-airmosaic-ai-platform-design.md
examples/agent_calls/: tap_acquisition_request.json
skills/data_acquisition/01_socioeconomic/csmar/: SKILL.md  datasets.yaml
skills/data_acquisition/01_socioeconomic/ind_yearbook/: SKILL.md  datasets.yaml
skills/data_acquisition/01_socioeconomic/worldpop/: datasets.yaml
skills/data_acquisition/04_impact/ihme-gbd-results/: datasets.yaml
skills/data_acquisition/ihme-gbd-results/: SKILL.md  skill.schema.json
skills/data_acquisition/ihme-gbd-results/agents/: openai.yaml
skills/data_acquisition/worldpop/: SKILL.md  skill.schema.json
skills/model/gcam/: SKILL.md  data_boundary.md
src/airmosaic_core/: __init__.py  cli.py
src/airmosaic_core/services/: __init__.py  causal_design.py  data_access.py  data_catalog.py
tests/: test_core_services.py
workflow/: SKILL.md
workflow/layers/: 01_socioeconomic.yaml  02_emission_inventory.yaml  03_atmospheric_transport.yaml  04_impact.yaml  04_socioeconomic_impact.yaml
workflow/references/: io_traceability.md
(+61 files in other folders)
