[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airmosaic-core"
version = "0.1.0"
description = "Core services and data acquisition skills for AirMosaic AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
airmosaic = "airmosaic_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

